feat: Refactor clean_by_month.ipynb for improved performance

--- a/src/clean/clean_by_month.ipynb
+++ b/src/clean/clean_by_month.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,18 +232,7 @@
     "    'total-activos', 'total-inactivos', 'total-N/A'\n",
     "]\n",
     "# make a new df to add the rows with the classified delitos\n",
-    "df_final = pd.DataFrame(\n",
-    "    columns=['Fecha_de_Ingreso', 'Cédula', 'Delito', \n",
-    "    'penal-activos', 'penal-inactivos', 'penal-N/A'\n",
-    "    'alimentos-activos', 'alimentos-inactivos', 'alimentos-N/A',\n",
-    "    'familiares-activos', 'familiares-inactivos', 'familiares-N/A',\n",
-    "    'estafa-activos', 'estafa-inactivos', 'estafa-N/A',\n",
-    "    'robo-activos', 'robo-inactivos', 'robo-N/A',\n",
-    "    'cobros-activos', 'cobros-inactivos', 'cobros-N/A',\n",
-    "    'otros-activos', 'otros-inactivos', 'otros-N/A',\n",
-    "    'total-activos', 'total-inactivos', 'total-N/A'\n",
-    "    ]\n",
-    ")\n",
+    "df_aggregate = []\n",
     "\n",
     "# Create a dictionary to store the count of classified delitos for each cedula\n",
     "classified_delitos_count = {}\n",
@@ -281,6 +270,8 @@
     "            'total-activos': 0, 'total-inactivos': 0, 'total-N/A': 0\n",
     "        }\n",
     "    else:\n",
+    "        if category not in classified_delitos_count[cedula]:\n",
+    "            classified_delitos_count[cedula][category] = 0\n",
     "        classified_delitos_count[cedula][category] += 1\n",
     "        if estado == 'Activos':\n",
     "            classified_delitos_count[cedula]['total-activos'] += 1\n",
@@ -294,7 +285,10 @@
     "        'Cédula': cedula,\n",
     "        **classified_delitos_count[cedula],\n",
     "    }\n",
-    "    print(data)\n",
+    "    # add the row to the df_aggregate\n",
+    "    df_aggregate.append(pd.DataFrame([data]))\n",
+    "\n",
+    "pd.concat(df_aggregate).to_csv('judicial_aggregate.csv', index=False)\n",
     "\n"
    ]
   }
@@ -315,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
